// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<Modal
  contentLabel=""
  onRequestClose={[MockFunction]}
>
  <div />
</Modal>
`;

exports[`submits 1`] = `
<Modal
  contentLabel=""
  onRequestClose={[MockFunction]}
>
  <Button
    disabled={false}
    onClick={[Function]}
  >
    close
  </Button>
</Modal>
`;

exports[`submits 2`] = `
<Modal
  contentLabel=""
  onRequestClose={[MockFunction]}
>
  <Button
    disabled={true}
    onClick={[Function]}
  >
    close
  </Button>
</Modal>
`;

exports[`submits 3`] = `
<Modal
  contentLabel=""
  onRequestClose={[MockFunction]}
>
  <Button
    disabled={false}
    onClick={[Function]}
  >
    close
  </Button>
</Modal>
`;
